Bug 59279 - [4.9 Regression] r205337 breaks bootstrap with java
Summary: [4.9 Regression] r205337 breaks bootstrap with java
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.9.0
: P3 normal
Target Milestone: 4.9.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-24 20:39 UTC by H.J. Lu
Modified: 2013-11-25 08:46 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2013-11-24 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2013-11-24 20:39:04 UTC
On Linux/x86, r205337 failed to bootstrap with java:

export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:
In class 'gnu.xml.aelfred2.XmlParser':
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:
In method 'gnu.xml.aelfred2.XmlParser.parseXMLDecl(boolean)':
In file included from
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:5804:0,
                 from
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/SAXDriver.java:1509,
                 from
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:5793,
                 from
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/SAXDriver.java:1605,
                 from
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:5813,
                 from <built-in>:14:
/export/gnu/import/git/gcc-test-intel64/src-trunk/libjava/classpath/gnu/xml/aelfred2/XmlParser.java:844:0:
internal compiler error: in remove_insn, at emit-rtl.c:3981
     return encodingName;
 ^
0x66b1f3 remove_insn(rtx_def*)
    ../../src-trunk/gcc/emit-rtl.c:3981
0x5cf31b delete_insn(rtx_def*)
    ../../src-trunk/gcc/cfgrtl.c:170
0xd5d7ae delete_dead_jump_tables_between
    ../../src-trunk/gcc/cfgcleanup.c:2971
0xd60511 delete_dead_jumptables()
    ../../src-trunk/gcc/cfgcleanup.c:2997
0xd617a2 cleanup_cfg(int)
    ../../src-trunk/gcc/cfgcleanup.c:3084
0xdbd15a rest_of_handle_if_conversion
    ../../src-trunk/gcc/ifcvt.c:4482
0xdbd15a execute
    ../../src-trunk/gcc/ifcvt.c:4516
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
make[8]: *** [gnu-xml-aelfred2.lo] Error 1
Comment 1 H.J. Lu 2013-11-24 20:53:22 UTC
When profiledbootstrap configured with

--with-build-config=bootstrap-lto --disable-werror

I got

../../src-trunk/libiberty/cp-demangle.c: In function âd_demangle_callbackâ:
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 28
 }
 ^
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 21
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 18
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 17
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 12
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: verify_flow_info: Incorrect blocks for fallthru 11->29
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after block 10
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: verify_flow_info: Incorrect blocks for fallthru 4->11
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: verify_flow_info: Incorrect blocks for fallthru 3->13
../../src-trunk/libiberty/cp-demangle.c:5694:1: error: verify_flow_info: Incorrect blocks for fallthru 2->4
../../src-trunk/libiberty/cp-demangle.c:5694:1: internal compiler error: verify_flow_info failed
0x77a8d0 verify_flow_info()
	../../src-trunk/gcc/cfghooks.c:260
0x79f439 cfg_layout_finalize()
	../../src-trunk/gcc/cfgrtl.c:4310
0x79fecf outof_cfg_layout_mode
	../../src-trunk/gcc/cfgrtl.c:3483
0x79fecf execute
	../../src-trunk/gcc/cfgrtl.c:3550
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
make[6]: *** [cp-demangle.o] Error 1
make[6]: Leaving directory `/export/gnu/import/git/gcc-test-profiled/bld/libiberty'
make[5]: *** [all-stagefeedback-libiberty] Error 2
make[4]: *** [stagefeedback-bubble] Error 2
make[4]: Leaving directory `/export/gnu/import/git/gcc-test-profiled/bld'
make[3]: *** [profiledbootstrap] Error 2
Comment 2 Steven Bosscher 2013-11-24 21:59:51 UTC
Author: steven
Date: Sun Nov 24 21:59:49 2013
New Revision: 205338

URL: http://gcc.gnu.org/viewcvs?rev=205338&root=gcc&view=rev
Log:
	PR bootstrap/59279
	Revert previous commit.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/cfgcleanup.c
    trunk/gcc/cfgrtl.c
    trunk/gcc/ira.c
    trunk/gcc/jump.c
    trunk/gcc/loop-init.c
    trunk/gcc/modulo-sched.c
Comment 3 Steven Bosscher 2013-11-24 22:12:07 UTC
will have to figure this one out, it's very unexpected.
Comment 4 Steven Bosscher 2013-11-24 22:40:47 UTC
(In reply to H.J. Lu from comment #1)
> When profiledbootstrap configured with
> 
> --with-build-config=bootstrap-lto --disable-werror
> 
> I got
> 
> ../../src-trunk/libiberty/cp-demangle.c: In function âd_demangle_callbackâ:
> ../../src-trunk/libiberty/cp-demangle.c:5694:1: error: missing barrier after
> block 28

Can you please add the preprocessed source and complete command line for this error?
Comment 5 Steven Bosscher 2013-11-25 08:46:07 UTC
OK, thinko on my part: Can't remove the label before a JUMP_TABLE_DATA
if we're in cfglayout mode, because:

1. PREV_INSN (label) may be NULL
2. remove_insn doesn't update BB_FOOTER/BB_HEADER

I'll re-test the patch with a change to retain the label.