	PR bootstrap/59279 	Revert previous commit.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205338 138bc75d-0d04-0410-961f-82ee72b054a4